Styled the main navbar section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <nav class="navbar" aria-label="main-navigation">
-      <ul>
+      <ul class="main-links">
         <li><a href="#subjects">Subjects</a></li>
         <li><a href="#planner">Planner</a></li>
         <li><a href="#timer">Timer</a></li>
