Added responsive handburger menu effect to navbar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       </div>
     </header>
     <nav class="navbar" aria-label="main-navigation">
+      <button class="hamburger">&#9776;</button>
       <ul class="main-links">
         <li><a href="#subjects">Subjects</a></li>
         <li><a href="#planner">Planner</a></li>
