--- a/index.html
+++ b/index.html
@@ -30,21 +30,43 @@
     </nav>
 
     <main>
-      <section id="subjects">
-        <h2>Subjects</h2>
-        <nav aria-label="subjects-navigation-section"></nav>
+      <section class="main-link-section" id="subjects">
+        <fieldset>
+          <legend>Subjects</legend>
+          <nav aria-label="subjects-navigation-section">
+            <div class="searchBar">
+              <input type="search" placeholder="Enter Subject.." />
+              <button class="search">search</button>
+            </div>
+            <ul>
+              <li><a id="html">HTML</a></li>
+              <li><a id="css">CSS</a></li>
+              <li><a id="js">JS</a></li>
+            </ul>
+          </nav>
+          <div class="content"></div>
+        </fieldset>
       </section>
-      <section id="planner">
-        <h2>Planner</h2>
+
+      <section class="main-link-section" id="planner">
+        <fieldset>
+          <legend>Planner</legend>
         <nav aria-label="planner-navigation-section"></nav>
+        <div class="content"></div>
+        </fieldset>
       </section>
-      <section id="timer">
-        <h2>Timer</h2>
+      <section class="main-link-section" id="timer">
+        <fieldset>
+          <legend>Timer</legend>
         <nav aria-label="timer-navigation-section"></nav>
+        <div class="content"></div>
+        </fieldset>
       </section>
-      <section id="notes">
-        <h2>Notes</h2>
+      <section class="main-link-section" id="notes">
+        <fieldset>
+          <legend>Notes</legend>
         <nav aria-label="Notes-navigation-section"></nav>
+        <div class="content"></div>
       </section>
 
       <!-- I need to learn more about dialog element and how it works before I proceed -->
