Made design & color changes to all sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
               <li><a id="js">JS</a></li>
             </ul>
           </nav>
-          <div class="content"></div>
+          <div class="content">
+            <h2>JavaScript</h2>
+            <div class="sub-content">
+              <p>JavaScript (JS) is a high-level, versatile programming language that's primarily used to add interactivity and dynamic behavior to websites. It's one of the core technologies of web development, alongside HTML and CSS.</p>
+            </div>
+            <div class="sub-content">
+              <p>JS is a programming language, that uses single treadh system.</p>
+            </div>
+            <div class="sub-content">
+              <p>JS is a programming language, that uses single treadh system.</p>
+            </div>
+          </div>
         </fieldset>
       </section>
 
