Modularized css code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/headingSection.css" />
+    <link rel="stylesheet" href="./styles/navBarSection.css">
+    <link rel="stylesheet" href="./styles/allSections.css">
   </head>
   <body>
     <header id="top">
@@ -38,7 +41,7 @@
               <input type="search" placeholder="Enter Subject.." />
               <button class="search">search</button>
             </div>
-            <ul>
+            <ul class="subject-search-results">
               <li><a id="html">HTML</a></li>
               <li><a id="css">CSS</a></li>
               <li><a id="js">JS</a></li>
