Added and styled noteHeading

--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
       <section class="main-link-section" id="notes">
         <fieldset>
           <legend>Notes</legend>
-        <nav aria-label="Notes-navigation-section"></nav>
-        <div class="content"></div>
+        <div class="noteHeading">
+          <button class="add-notes-btn" onclick="openNoteDialog()">Add new note +</button>
+        </div>
+        <div class="noteGrid"></div>
       </section>
 
       <!-- I need to learn more about dialog element and how it works before I proceed -->
