--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
 
         <dialog id="createNoteDialog">
           <form action="dialog">
-            <input type="text" id="noteTitle" placeholder="Title.." /><br><br>
-            <textarea id="notesArea" rows="5" cols="30"></textarea><br><br>
+            <input type="text" id="noteTitle" placeholder="Title.." />
+            <textarea id="notesArea" rows="10" cols="30"></textarea>
 
-            <button type="submit">Submit</button>
-            <button type="button" id="closeNoteDialog">Cancel</button>
+            <div class="buttons">
+              <button type="submit">Submit</button>
+              <button type="button" id="closeNoteDialog">Cancel</button>
+            </div>
+            
           </form>
         </dialog>
 
