Added title property to #notesArea for user assist

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
              id="notesArea" 
              rows="10" cols="30" 
              placeholder="Write your notes here..."
-             
+             title="You can drag the bottom-right corner to resize this area."
             ></textarea>
 
             <div class="buttons">
